# api/api.go
@@ -120,10 +120,12 @@ func (api *API) loadRoutes() {
 		{Path: "/validators/fee/ranges", Method: http.MethodGet, Func: api.GetFeeRanges},
 		{Path: "/validators/delegators/total", Method: http.MethodGet, Func: api.GetValidatorsDelegatorsTotal},
 		{Path: "/accounts/whale/agg", Method: http.MethodGet, Func: api.GetAggWhaleAccounts},
-		{Path: "/validator/{address}", Method: http.MethodGet, Func: api.GetValidator},
 		{Path: "/validator/{address}/balance", Method: http.MethodGet, Func: api.GetValidatorBalance},
 		{Path: "/validator/{address}/delegations/agg", Method: http.MethodGet, Func: api.GetValidatorDelegationsAgg},
 		{Path: "/validator/{address}/delegators/agg", Method: http.MethodGet, Func: api.GetValidatorDelegatorsAgg},
+		{Path: "/validator/{address}/blocks/stats", Method: http.MethodGet, Func: api.GetValidatorBlocksStat},
+		{Path: "/validator/{address}", Method: http.MethodGet, Func: api.GetValidator},
+		{Path: "/validator/{address}/delegators", Method: http.MethodGet, Func: api.GetValidatorDelegators},
 	})
 
 }
